[package]
authors = ["Konstantin Stepanov <me@kstep.me>", "Alexander Kuvaev <alexander@kuvaev.me>"]
build = "build.rs"
description = "Vkontakte API Rust client library"
documentation = "http://kstep.me/vkrs/vkrs/index.html"
keywords = ["vk", "vkontakte", "api"]
license = "MIT/Apache-2.0"
name = "vkrs"
repository = "https://github.com/kstep/vkrs"
version = "0.6.0"
readme = "README.md"

[build-dependencies]

[build-dependencies.serde_codegen]
optional = true
version = "0.7.0"

[build-dependencies.syntex]
optional = true
version = "0.29.0"

[dev-dependencies]
clap = "^2.1.1"

[dependencies]
hyper = "^0.7.2"
inth-oauth2 = "0.7.0"
rustc-serialize = "0.3.16"
serde = "^0.7.0"
serde_json = "^0.7.0"
url = "^0.5.5"

[dependencies.serde_macros]
optional = true
version = "^0.7.0"

[dependencies.chrono]
version = "0.2.19"
features = ["serde"]

[features]
default = ["serde_codegen", "syntex"]
unstable = ["serde_macros"]
