[package]
authors = ["Konstantin Stepanov <me@kstep.me>", "Alexander Kuvaev <alexander@kuvaev.me>"]
description = "Vkontakte API Rust client library"
documentation = "http://kstep.me/vkrs/vkrs/index.html"
keywords = ["vk", "vkontakte", "api"]
license = "MIT/Apache-2.0"
name = "vkrs"
repository = "https://github.com/kstep/vkrs"
version = "0.7.0"
readme = "README.md"

[dev-dependencies]
clap = "^2.1.1"

[dependencies]
inth-oauth2 = "0.16.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
serde_derive = "1.0.0"
url = "^1.7.0"
chrono = "0.4.6"
reqwest = "0.9.5"
lazy_static = "1.2.0"

